@@ -1,7 +1,10 @@
 2012-02-03  Romain Francois  <romain@r-enthusiasts.com>
 
         * inst/include/Rcpp/Extractor.h: rmove use of Fast in Extractor
-
+        
+        * inst/include/Rcpp/sugar/functions/mapply/mapply.h: new sugar function, 
+        similar to sapply, but with 2 or 3 (for now) input vectors
+        
 2012-02-01  Romain Francois  <romain@r-enthusiasts.com>
 
         * inst/include/Rcpp/iostream/Rostream.h: no need to include Rcpp.h
